--- a/css/poetry.css
+++ b/css/poetry.css
@@ -24,7 +24,7 @@ div#leftcol {
 
 }
 
-#flexwrapper { display: flex; max-width: 80% }
+#flexwrapper { display: flex; max-width: 80%; margin:auto }
 div#rightcol {
   font-family: "Encode Sans", "Skia"; line-height: 1.4em;
   font-size: 24px;
